@@ -1,5 +1,6 @@
 2015-12-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix for password edition
+	* Fixes for files upload
 
 2015-12-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix for the login forms
